vlib/v/checker/tests/return_fixed_array.out
builder error: redefinition of function `return_fixed_array`
vlib/v/checker/tests/return_fixed_array.vv:3:1: conflicting declaration: fn return_fixed_array() [3]int
    1 | type Abc = [3]int
    2 | 
    3 | fn return_fixed_array() [3]int {
      | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    4 |     return [1, 2, 3]!
    5 | }
vlib/v/checker/tests/return_fixed_array.vv:11:1: conflicting declaration: fn return_fixed_array() [3]int
    9 | }
   10 | 
   11 | fn return_fixed_array() Abc {
      | ~~~~~~~~~~~~~~~~~~~~~~~~~~~
   12 |     return [1, 2, 3]!
   13 | }
